<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Source: https://www.youtube.com/watch?v=HwYENW0RyY4 -->

    <item android:title="@string/options">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_movies"
                    android:icon="@android:drawable/star_off"
                    android:title="@string/movies" />
                <item
                    android:id="@+id/nav_detail"
                    android:icon="@android:drawable/star_off"
                    android:title="@string/detail" />
                <item
                    android:id="@+id/nav_favorites"
                    android:icon="@android:drawable/star_off"
                    android:title="@string/favorites" />
            </group>
        </menu>
    </item>


</menu>
